--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = bamstats
 
+https://travis-ci.org/guigolab/bamstats[image:https://travis-ci.org/guigolab/bamstats.svg?branch=develop["Build Status"]^]
+
 `Bamstats` is a command line tool written in `Go` for computing mapping statistics from a `BAM` file.
 
 It currently supports the following statistics:
